--- a/src/Pages/User/Login/Login.css
+++ b/src/Pages/User/Login/Login.css
@@ -58,9 +58,18 @@
     margin-left: 100px;
     cursor: pointer;
 }
-.login-form p{
+.login-stae{
     text-decoration:underline;
     margin-left: 90px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    cursor: pointer;
+    
+
+}
+.signup-stage{
+    text-decoration:underline;
+    margin-left: 60px;
     margin-top: 20px;
     margin-bottom: 20px;
     cursor: pointer;
