--- a/src/Pages/User/Login/Login.css
+++ b/src/Pages/User/Login/Login.css
@@ -2,8 +2,7 @@
     height: 100vh;
     padding: 20px 8%;
    
-    background-image: linear-gradient(#0000007e,#0000007e), url('/mountains_rocks_stones_1285735_1366x768.jpg');
-    
+    background-image: linear-gradient(#0000007e,#0000007e), url('/mountains_rocks_stones_1285735_1366x768.jpg'); 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,6 +16,7 @@
     padding-left: 60px;
     padding-right: 60px;
     flex-direction: column;
+    margin: auto;
 
    
 }
@@ -40,6 +40,7 @@
     padding: 25px 20px;
     font-size: 16px;
     font-weight: 500;
+    
 }
 .login-form input::placeholder{
     font-size: 16px;
