--- a/src/Pages/Admin/AdminDashboard/Dash.css
+++ b/src/Pages/Admin/AdminDashboard/Dash.css
@@ -1,6 +1,6 @@
 .Main-div{
     width: 100%;
-    height: 1500px;
+    height: 100vh   ;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -18,7 +18,8 @@
     font-family: poppins;
 }
 .Table{
-    height:50%;
+    min-height:30%;
+    max-height: 60%;
     width: 90%;
     background-color: rgba(255, 255, 255, 0.188);
     border-radius: 10px;
