--- a/src/Pages/Admin/Login/AdLogin.css
+++ b/src/Pages/Admin/Login/AdLogin.css
@@ -1,4 +1,4 @@
-.AdLogin{
+.AdminLogin{
     height: 100vh;
     padding: 20px 8%;
     background-image:linear-gradient(#0000007e,#0000007e),url('/lake_mountains_landscape_1285583_1366x768.jpg') ;
