--- a/src/Pages/User/Login/Login.css
+++ b/src/Pages/User/Login/Login.css
@@ -1,8 +1,17 @@
 .login{
     height: 100vh;
     padding: 20px 8%;
-   
-    background-image: linear-gradient(#0000007e,#0000007e), url('/mountains_rocks_stones_1285735_1366x768.jpg'); 
+    background-image: linear-gradient(#0000007e,#0000007e), url('/mountains_rocks_stones_1285735_1366x768.jpg');
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.signup{
+    height: auto;
+    padding: 20px 8%;
+    background-image: linear-gradient(#0000007e,#0000007e), url('/mountains_rocks_stones_1285735_1366x768.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,7 +25,6 @@
     padding-left: 60px;
     padding-right: 60px;
     flex-direction: column;
-    margin: auto;
 
    
 }
@@ -40,7 +48,6 @@
     padding: 25px 20px;
     font-size: 16px;
     font-weight: 500;
-    
 }
 .login-form input::placeholder{
     font-size: 16px;
@@ -76,3 +83,31 @@
     margin-bottom: 20px;
     cursor: pointer;
 }
+.profile-img-login {
+    width: 150px;
+    height: 150px;
+    margin: 20px;
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    margin-left: 80px;
+    background-color: #333;
+  }
+  
+  .profile-img-login img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .profile-img-login input {  
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+  }
